fix(responsiveness): apply minor layout adjustments for better display on mobile screens

--- a/src/features/common/Layout/Navbar/NavbarMenu.module.scss
+++ b/src/features/common/Layout/Navbar/NavbarMenu.module.scss
@@ -34,7 +34,7 @@
   @include xsPhoneView {
     min-width: 367px;
     top: 43px;
-    right: -125px;
+    right: -154px;
   }
 }
 
@@ -45,7 +45,7 @@
   @include xsPhoneView {
     min-width: 367px;
     top: 43px;
-    right: -57px;
+    right: -130px;
   }
 }
 
